force-app/main/default/objects/ReceivedFax__c/ReceivedFax__c.object-meta.xml
<CustomObject>
    <label>受信FAX</label>
    <nameField>
        <label>受信FAX名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>