force-app/main/default/objects/ReceivedFax__c/fields/mail__c.field-meta.xml
<CustomField>
    <fullName>mail__c</fullName>
    <label>メール</label>
    <type>Email</type>
</CustomField>