force-app/main/default/objects/ReceivedFax__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連案件</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>受信FAX</relationshipLabel>
    <relationshipName>Matter</relationshipName>
    <type>Lookup</type>
</CustomField>